--- a/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
@@ -11,10 +11,61 @@
         <f:viewAction action="#{calificacionGramaticaControlador.buscaTareas()}"/>
     </f:metadata>
     <ui:define name="menu">
-
+        <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
+            <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
+            <ui:remove>
+                <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
+            </ui:remove>
+        </ul>
+        <div class="uk-navbar-left uk-hidden@m">
+            <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
+        </div>
+        <div id="menu" uk-offcanvas="overlay: true">
+            <div class="uk-offcanvas-bar  ">
+                <button class="uk-offcanvas-close" type="button" uk-close=""/>
+                <ul class="uk-nav  nav-sub-offcanvas ">
+                    <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
+                    <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
+                </ul>
+            </div>
+        </div>
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/profesor/gramatica.css"/>
+
+      <div class="uk-grid" uk-grid="">
+        <div class="uk-width-1-3@m">
+            <div class="uk-card uk-card-default uk-card-small color-card-six margen-one">
+                <div class="uk-card-header barder-card">
+                    <div class="uk-grid-small uk-flex-middle" uk-grid="">
+                        <div class="uk-width-auto">
+                            <h:graphicImage styleClass="uk-border-circle" library="img" name="/avatar/maestro.svg" width="50" height="50"/>
+                        </div>
+                        <div class="uk-width-expand">
+                            <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold">
+                                #{profesorControlador.profesorModelo.nombre.concat(' ').concat(profesorControlador.profesorModelo.apellidoPaterno).concat(' ').concat(profesorControlador.profesorModelo.apellidoMaterno)}
+                            </h3>
+                            <p class="uk-text-meta uk-margin-remove-top uk-text-small"><span>#{profesorControlador.profesorModelo.apodo}</span></p>
+                        </div>
+                        <div class="uk-width-1-1@s">
+                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Nickname: </span>#{profesorControlador.profesorModelo.apodo}</p>
+                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Email: </span>#{profesorControlador.profesorModelo.correoEletronico}</p>
+                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-primary">Edit Profile: </span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="uk-card-body padding-card-body">
+                    <h3 class="uk-text-uppercase uk-text-bold ">grupo</h3>
+                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Grado: </span>#{profesorGrupoControlador.grupoModelo.grado}</p>
+                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Grupo: </span>#{profesorGrupoControlador.grupoModelo.grupo}</p>
+                </div>
+            </div>
+        </div>
+        <div class="boton-regresa uk-width-2-3@m">
+            <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
+        </div>
+    </div>
+
         <div class="uk-section uk-margin-medium-top">
             <div class="calificar">
                 <h:form id="formulario-califica">
