CAmbios para la secuencua de alumno

--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -92,6 +92,8 @@
             </table>
         </div>
     </ui:define>
-    <ui:define name="file-js"></ui:define>
+    <ui:define name="file-js">
+        <h:outputScript library="js" name="profesor/agregar-csv.js"/>
+    </ui:define>
 </ui:composition>
 </html>
