--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -22,6 +22,14 @@
                 <li class="uk-text-uppercase"><h:link outcome="perfil" styleClass="letra-color-subnav uk-text-capitalize" value="edit profile"/></li>
             </ui:remove>
         </ul>
+        <ui:remove>
+            <nav>
+                <p>
+                    <a href="/">Principal</a> ▸
+                    <a href="/Admin. Alumnos/">Admin. Alumnos</a> ▸
+                </p>
+            </nav>
+        </ui:remove>
         <div class="uk-navbar-left uk-hidden@m">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
         </div>
