--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -15,7 +15,7 @@
     <ui:define name="menu">
         <div class="">
             <ul class="uk-subnav uk-visible@m " uk-margin="">
-                <li ><h:link outcome="tablero" value="#{etiqueta['home']}" styleClass="letra-color-subnav"/></li>
+                <li ><h:link outcome="tablero" value="#{etiqueta['home']}" styleClass="borde-home"/></li>
                 <li class="borde-menu">
                     <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
                 </li>
