--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -41,7 +41,7 @@
         <!--CARDS WRAPPER-->
         <section class="uk-section uk-section-default uk-section-default uk-padding-remove-top " data-uk-filter="target: .js-filter">
             <div class="uk-container uk-container-expand">
-                <ul class="uk-subnav  nav-default-profesor2 uk-subnav-alumno2">
+                <ul class="uk-subnav uk-margin-top nav-default-profesor2 uk-subnav-alumno2">
                     <li class="uk-active" data-uk-filter-control=".actividad-card"><a href="#">Actividad/Alumno</a></li>
                     <li data-uk-filter-control=".tarea-card"><a href="#">Tareas</a></li>
                     <li data-uk-filter-control=".nivel-card "><a href="#">Asignación de nivel</a></li>
