implementando migas de pan

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
@@ -61,8 +61,8 @@
                 </div>
             </div>
         </div>
-        <div class="boton-regresa uk-width-2-3@m">
-            <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
+        <div class="boton-regresa2 uk-width-2-3@m">
+            <h:button styleClass="boton-maestro-base2" value="regresar" outcome="tablero"/>
         </div>
     </div>
 
