--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -10,26 +10,23 @@
 
 <ui:composition template="/template/profesor/dashboard-profesor.xhtml">
     <ui:define name="menu">
-        <ul class="uk-subnav uk-visible@m " uk-margin="">
-            <li class="nav-sub-active">
-                <span>#{etiqueta['home']}</span>
-            </li>
-            <li class="borde-menu">
-                <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
-            </li>
-            <ui:remove>
-                <li class="uk-text-uppercase"><h:link outcome="biblioteca-profesor" styleClass="letra-color-subnav uk-text-capitalize" value="library"/></li>
-                <li class="uk-text-uppercase"><h:link outcome="perfil" styleClass="letra-color-subnav uk-text-capitalize" value="edit profile"/></li>
-            </ui:remove>
-        </ul>
-        <ui:remove>
-            <nav>
-                <p>
-                    <a href="/">Principal</a> ▸
-                    <a href="/Admin. Alumnos/">Admin. Alumnos</a> ▸
-                </p>
-            </nav>
-        </ui:remove>
+        <div>
+            <ul class="uk-subnav uk-visible@m " uk-margin="">
+                <li class="nav-sub-active">
+                    <span>#{etiqueta['home']}</span>
+                </li>
+                <li class="borde-menu">
+                    <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
+                </li>
+                <ui:remove>
+                    <li class="uk-text-uppercase"><h:link outcome="biblioteca-profesor" styleClass="letra-color-subnav uk-text-capitalize" value="library"/></li>
+                    <li class="uk-text-uppercase"><h:link outcome="perfil" styleClass="letra-color-subnav uk-text-capitalize" value="edit profile"/></li>
+                </ui:remove>
+            </ul>
+            <ol class="uk-breadcrumb">
+                <li><span>Principal</span></li>
+            </ol>
+        </div>
         <div class="uk-navbar-left uk-hidden@m">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
         </div>
