--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -11,6 +11,7 @@
     <f:metadata>
         <f:viewParam name="grupo" value="#{grupoAlumnoControlador.idGrupo}" required="true"/>
         <f:viewAction action="#{grupoAlumnoControlador.buscaDetalleAlumnos}"/>
+        <f:event type="postValidate" listener="#{grupoAlumnoControlador.validaParametro}"/>
     </f:metadata>
     <ui:define name="menu">
         <div class="">
@@ -73,7 +74,12 @@
             <div class="botones uk-width-2-3@m">
                 <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
                 <h:button styleClass="boton-escuadron-base" value="agregar-csv" outcome="agregar-csv"/>
-                <button class="boton-escuadron-base reporte" data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}" data-grado="#{profesorGrupoControlador.grupoModelo.grado}">reporte</button>
+                <button class="boton-escuadron-base reporte"
+                        disabled="#{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista ? 'disabled' : ''}"
+                        data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}"
+                        data-grado="#{profesorGrupoControlador.grupoModelo.grado}">
+                    reporte
+                </button>
                 <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
             </div>
         </div>
@@ -132,7 +138,7 @@
                                 <h:outputText value=" / ${tarea.totalAsignadaCompletar}" rendered="${tarea.totalAsignadaCompletar ne 0}"/>
                             </h:column>
                             <h:column >
-                                <f:facet name="header"><span class="letra-tabla uk-text-bold">Opciones</span></f:facet>
+                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{etiqueta['options']}</span></f:facet>
                                 <button class="uk-icon-button puntero" uk-icon="more-vertical" type="button"/>
                                 <h:panelGroup layout="block" pt:uk-dropdown="boundary:.tabla-alumnos; mode: click" id="dropear" >
                                     <ul class="uk-nav uk-dropdown-nav uk-text-left">
@@ -150,8 +156,29 @@
                     </div>
                 </h:form>
                 <h:panelGroup layout="block" id="tabla-vacia" rendered="#{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista}">
-                    <div><span>NOMBRE</span><span>MAPA MENTAL</span><span>ORDENAR PALABRA</span><span>RELACIONAR IMAGEN PALABRA</span><span>ORDENAR ORACIONES</span><span>RELACIONAR PREGUNTA RESPUESTA</span><span>COMPLETAR ORACIONES</span></div>
-                    <div></div>
+                    <table class="uk-table uk-table-middle">
+                    <thead class="uk-background-primary">
+                    <tr>
+                        <th><span class="letra-titulo">nombre</span></th>
+                        <th><span class="letra-titulo">#{alumno['for.all.views.mind.map']}</span></th>
+                        <th><span class="letra-titulo">#{alumno['activities.bar.icon.order']}</span></th>
+                        <th><span class="letra-titulo">#{alumno['more.activity.title.match.image']}</span></th>
+                        <th><span class="letra-titulo">#{alumno['more.activity.title.order.prayer']}</span></th>
+                        <th><span class="letra-titulo">#{alumno['more.activity.title.matching.words']}</span></th>
+                        <th><span class="letra-titulo">#{alumno['more.activity.title.complete.prayers']}</span></th>
+                        <th><span class="letra-titulo">#{etiqueta['options']}</span></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td colspan="8">
+                            <div class="uk-flex uk-flex-center">
+                                <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                    </table>
                 </h:panelGroup>
             </div>
         </div>
