--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -13,13 +13,20 @@
         <f:viewAction action="#{tareaAlumnoControlador.detalle}"/>
     </f:metadata>
     <ui:define name="menu">
-        <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
-           <li ><h:link outcome="dashboard-maestro" value="#{etiqueta['home']}" styleClass="letra-color-subnav"/></li>
-           <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
-           <li class="boton-cerrar">
-               <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
-           </li>
-        </ul>
+        <div>
+            <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
+               <li ><h:link outcome="dashboard-maestro" value="#{etiqueta['home']}" styleClass="letra-color-subnav"/></li>
+               <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
+               <li class="boton-cerrar">
+                   <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
+               </li>
+            </ul>
+            <ol class="uk-breadcrumb">
+                <li><a href="#">Principal</a></li>
+                <li><a href="#">Student Administration</a></li>
+                <li><span>Student Homework</span></li>
+            </ol>
+        </div>
         <div class="uk-navbar-left uk-hidden@m">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
         </div>
@@ -37,6 +44,8 @@
         <h:outputStylesheet library="css" name="tablas.css"/>
         <h:outputStylesheet library="css" name="graficas.css"/>
         <h:outputStylesheet library="css" name="/profesor/tarea-alumno.css"/>
+
+        <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">Student Homework</h1></div>
 
         <!--CARDS WRAPPER-->
         <section class="uk-section uk-section-default uk-section-default uk-padding-remove-top " data-uk-filter="target: .js-filter">
