tooltip de relacionar palabra imagen

--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -93,7 +93,7 @@
                         <li uk-filter-control=".ordenar" uk-tooltip="#{alumno['activities.title.order.sentences']}" class="uk-animation-toggle uk-active" tabindex="0" style="display: #{empty tareaOracionesControlador.tareaOracionesModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
-                        <li uk-filter-control=".relacion-imagen" uk-tooltip="#{alumno['more.activity.title.match.image']}" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarControlador.relacionarModeloLista ? 'none' : 'block'}">
+                        <li uk-filter-control=".relacion-imagen" uk-tooltip="#{alumno['more.activity.title.matching.words']}" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarControlador.relacionarModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
                         <li uk-filter-control=".talking" uk-tooltip="#{alumno['more.activity.title.talk']}" class="uk-animation-toggle" tabindex="0" style="display: #{empty hablarControlador.hablarModeloLista ? 'none' : 'block'}">
