Ahora las imagenes vienen del storage, solo son modificaciones en la parte backend

--- a/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
@@ -82,18 +82,16 @@
             </ul>
         </div>
     </ui:define>
-      <ui:define name="contenido">
-          <h:outputStylesheet library="css" name="alumno/glosario.css"/>
-          <h:outputStylesheet library="css" name="letra.css"/>
+        <ui:define name="contenido">
+            <h:outputStylesheet library="css" name="alumno/glosario.css"/>
+            <h:outputStylesheet library="css" name="letra.css"/>
         <div class="uk-section">
-
             <div class="uk-container  uk-margin-auto" >
                 <h1 class="lescuadron letra-titulo sombra-titulo">Glossary</h1>
-
                 <ui:repeat value="#{glosarioControlador.glosarioModeloLista}" var="glosario">
                     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin tam-card" uk-grid="">
                         <div class="uk-card-media-left uk-cover-container contenedor-img">
-                            <img src="#{request.contextPath.concat('/imagen-glosario?palabra='.concat(glosario.palabra).concat('&amp;clave=').concat(glosario.claseGlosarioModelo.clave))}" class="glosario-img" alt="imagen"/>
+                            <img data-llave="${glosarioControlador.carpeta.concat('/').concat(glosario.palabra).concat('_').concat(glosario.claseGlosarioModelo.valor)}" class="glosario-img" alt="imagen"/>
                         </div>
                         <div>
                             <div class="uk-card-body">
@@ -105,11 +103,8 @@
                         </div>
                     </div>
                 </ui:repeat>
-
             </div>
-
         </div>
-      </ui:define>
-
+</ui:define>
 </ui:composition>
 </html>
