Ahora en ralacionar imagen palabra, es por medio de storage

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -238,6 +238,7 @@
                                     <h:graphicImage library="img" styleClass="finalizado movimiento2" name="/alumno/pop-art/boton-finished.svg" rendered="#{not empty alumnoControlador.tareaActividadModelo.respuesta}"/>
                                 </h:panelGroup>
                                 <h:inputHidden id="respuesta" value="#{transcripcionControlador.transcripcion}"/>
+                                <h:inputHidden id="calificacion" value="#{transcripcionControlador.calificacion}"/>
                                 <h:commandButton styleClass="boton-enviar boton-trasladar" style="margin-top: 20px"
                                                  value="#{boton['submit']}"
                                                  onclick="return validaContenido()"
