glosario imagen storage , actividad relacionar correccion

--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -287,6 +287,8 @@
     <ui:define name="enlaces-js">
         <h:outputScript library="js" name="/alumno/match-img.js"/>
         <h:outputScript library="js" name="/alumno/complete-sentences.js"/>
+        <script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.587.0.min.js"></script>
+        <h:outputScript library="js" name="/alumno/storage-relacionar-img.js"/>
     </ui:define>
 </ui:composition>
 </html>
