--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -146,6 +146,9 @@
         <h:panelGroup layout="block" styleClass="uk-container uk-child-width-1-2@m graficas" pt:uk-grid="" id="canvas">
 
         </h:panelGroup>
+        <div class="uk-flex uk-flex-center">
+            <button class="boton-escuadron-base">Atras</button><button class="boton-escuadron-base uk-margin-medium-left">Siguiente</button>
+        </div>
         <div class="uk-container uk-container-small uk-margin-medium-top uk-margin-large-bottom">
             <div class="uk-text-bold uk-margin-remove-bottom titulo-section padding-titulo primera-mayuscula">
                 <h:outputText
