--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -38,6 +38,7 @@
             <h:outputStylesheet library="css" name="/profesor/biblioteca-profesor.css"/>
             <h:outputStylesheet library="css" name="/profesor/scroll-profesor.css"/>
             <h:outputStylesheet library="css" name="/profesor/asignar-actividad.css"/>
+            <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">Assign Activity</h1></div>
             <div class="uk-container" data-uk-filter="target: .js-filter">
                 <div class="uk-width-1-1@m uk-margin-medium-top">
                     <form id="search-form" action="">
