--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -95,35 +95,12 @@
                                         <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
                                     </div>
                                     <div class="uk-card-footer" data-actividad="#{actividadModelo.idActividad}">
-                                        <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
-                                            <div class="uk-width-1-1@m uk-text-small text-color-level1 uk-text-bold">
-                                                <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
+                                        <h:panelGroup layout="block" styleClass=" uk-flex uk-flex-center">
                                                     <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/>
-                                                    <span uk-icon="icon: file-text" data-uk-tooltip="title:Didactic Guide"></span>
-                                                    <span uk-icon="icon: commenting" data-uk-tooltip="title: Cards"></span>
-                                                    <span uk-icon="icon: file-edit" data-uk-tooltip="title: Discussion"></span>
-                                                    <span uk-icon="icon: pencil" data-uk-tooltip="title: Lesson"></span>
-                                                    <!--<div> <h:outputLink pt:data-uk-tooltip="title: Grammar"  value="../resources/descargables/#{actividadModelo.idActividad}.pdf" target="_blank">
-                                                            <h:graphicImage styleClass=" uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/>
-                                                    </div>
-                                                    <div><h:outputLink pt:data-uk-tooltip="title: Didactic Guide"  value="../resources/guia/#{actividadModelo.idActividad}.pdf" target="_blank" >
-                                                            <span uk-icon="icon: file-text"></span>
-                                                         </h:outputLink>
-                                                    </div>
-                                                    <div><h:outputLink pt:data-uk-tooltip="title: Cards"  value="../resources/cartas/#{actividadModelo.idActividad}.pdf" target="_blank" >
-                                                            <span uk-icon="icon: commenting"></span>
-                                                         </h:outputLink>
-                                                    </div>
-                                                    <div><h:outputLink pt:data-uk-tooltip="title: Discussion"  value="../resources/plantilla/discussion.pdf" target="_blank" >
-                                                            <span uk-icon="icon: file-edit"></span>
-                                                         </h:outputLink>
-                                                    </div>
-                                                    <div><h:outputLink pt:data-uk-tooltip="title: Lesson"  value="../resources/plantilla/lesson.pdf" target="_blank" >
-                                                            <span uk-icon="icon: pencil"></span>
-                                                         </h:outputLink>
-                                                    </div>-->
-                                                </h:panelGroup>
-                                            </div>
+                                                    <span uk-icon="icon: file-text" data-uk-tooltip="title:Didactic Guide"/>
+                                                    <span uk-icon="icon: commenting" data-uk-tooltip="title: Cards"/>
+                                                    <span uk-icon="icon: file-edit" data-uk-tooltip="title: Discussion"/>
+                                                    <span uk-icon="icon: pencil" data-uk-tooltip="title: Lesson"/>
                                             <ui:remove>
                                                 <div class="uk-width-expand ">
                                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
