--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -146,7 +146,7 @@
                                     <div class="contenedor-imagen scroll-drag">
                                         <ui:repeat value="#{relacionarControlador.relacionarModeloLista}" var="relacionarModelo" varStatus="conta">
                                             <div class="imagen-relacionar uk-margin-auto ">
-                                                <img data-llave="#{relacionarControlador.carpeta.concat('/').concat(relacionarModelo.palabra).concat('_').concat(relacionarModelo.idClaseGlosario)}" alt="imagen"/>
+                                                <img data-llave="#{relacionarControlador.carpeta.concat('/').concat(relacionarModelo.palabra).concat('_').concat(relacionarModelo.claseGlosarioModelo.valor)}" alt="imagen"/>
                                             </div>
                                             <div class="respuesta-imagen-contenedor uk-flex uk-flex-center" uk-grid="">
                                                 <div class="icono-relacion-img uk-width-auto"></div>
@@ -171,7 +171,7 @@
                                                 <h:panelGroup layout="block"
                                                               id="res#{resp.index}"
                                                               pt:data-index="#{resp.index}"
-                                                              pt:data-codigo="#{relacionar.idClaseGlosario}"
+                                                              pt:data-codigo="#{relacionar.claseGlosarioModelo.clave}"
                                                               styleClass="palabra-imagen"
                                                               >
                                                     #{relacionar.palabra}
